<resources>
    <string name="app_name">Mine天气</string>

    <string name="login">登录</string>
    <string name="hint_login_user">请输入账号</string>
    <string name="hint_login_pwd">请输入密码</string>
    <string name="hint_login_pwd_2">请确认密码</string>
    <string name="hint_register_user">请输入手机号</string>
    <string name="hint_register_pwd">请输入密码</string>
    <string name="account">账号：</string>
    <string name="exit">退出登录</string>

    <string name="register">注册</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="get_code">获取验证码</string>
    <string name="hint_code">验证码</string>

    <string name="btn_next">下一步</string>
    <string name="pwd_error">密码错误！</string>
    <string name="login_succ">登录成功！</string>
    <string name="login_failed">登录失败！</string>
    <string name="register_succ">注册成功！</string>
    <string name="register_failed">注册失败！</string>
    <string name="clothe">穿衣指数--</string>
    <string name="sick">生病指数--</string>
    <string name="kongtiao">空调指数--</string>
    <string name="car">洗车指数--</string>
    <string name="sport">运动指数--</string>
    <string name="ziwaixian">紫外线指数--</string>
    <string name="pm">PM2.5--</string>

    <string name="mine">我的</string>
    <string name="collect">收藏的城市</string>
    <string name="mySetting">我的设置</string>
    <string name="about">关于我们</string>
    <string name="star">今日星座运势</string>

    <string name="load_error">加载失败！</string>
    <string name="load_succ">加载成功！</string>
    <string name="loading">正在加载...</string>

    <string name="yesterday">昨天</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>

    <string name="error_city">没有查询到该城市天气！</string>
    <string name="select_star">选择星座</string>
    <string name="my_city">我的城市</string>

    <array name="stars">
        <item>白羊座：Aries(3.21~4.20)</item>
        <item>金牛座：Taurus(4.21~5.21)</item>
        <item>双子座：Gemini(5.22~6.21)</item>
        <item>巨蟹座：Cancer(6.22~7.22)</item>
        <item>狮子座：Leo(7.23~8.23)</item>
        <item>处女座：Virgo(8.24~9.23)</item>
        <item>天秤座：Libra(9.24~10.23)</item>
        <item>天蝎座：Scorpion(10.24~11.22)</item>
        <item>射手座：Sagittarius(11.23~12.21)</item>
        <item>摩羯座：Capricorn(12.22~1.20)</item>
        <item>水瓶座：Aquarius(1.21~2.19)</item>
        <item>双鱼座：Pisces(2.20~3.20)</item>
    </array>

    <array name="star_name">
        <item>白羊座</item>
        <item>金牛座</item>
        <item>双子座</item>
        <item>巨蟹座</item>
        <item>狮子座</item>
        <item>处女座</item>
        <item>天秤座</item>
        <item>天蝎座</item>
        <item>射手座</item>
        <item>摩羯座</item>
        <item>水瓶座</item>
        <item>双鱼座</item>
    </array>

    <!--<string name="open_source">• 和风天气提供天气数据\n• 百度定位提供定位服务\n•阿凡达数据提供星座数据</string>-->

    <string name="app_describer">
        Mine天气：具有Material Design风格的一款天气开源应用\n项目源码采用MVP模式，OkGo+Glide+CityPicker等优秀的第三方开源库开发。\n
        天气模块数据由聚合数据提供，星座模块数据来源于阿凡达数据，百度定位提供定位服务。\n
        项目源码：：https://github.com/Jly912/weatherDemo。
        主要参考的项目：\n
        假装看天气 地址：https://github.com/li-yu/FakeWeather\n
        纸飞机 地址：https://github.com/TonnyL/PaperPlane\n

        主要用到的开源库：OkGo、Butterknife、citypicker、Glide、circleimageview…\n
        作者： 湘科院金大汉\n
        GitHub: https://github.com/Jly912\n
        邮箱：jal912@163.com\n
    </string>
    
    <string name="xiaoyan">小燕</string>
    <string name="xiaoyu">小宇</string>
    <string name="xiaoqi">小琪</string>
    <string name="xiaomei">小梅</string>
    <string name="xiaoli">小莉</string>
    <string name="xiaoxin">小新</string>
    <string name="nanan">楠楠</string>
</resources>
