<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/maincolor">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mySetting"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_below="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cp_gray_deep"
            android:padding="@dimen/dp_10"
            android:text="语音播报声音设置"
            android:textColor="@color/white" />

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_xyan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiaoyan" />

            <RadioButton
                android:id="@+id/rb_xy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiaoyu" />

            <RadioButton
                android:id="@+id/rb_xq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiaoqi" />

            <RadioButton
                android:id="@+id/rb_xm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiaomei" />

            <RadioButton
                android:id="@+id/rb_xl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiaoli" />

            <RadioButton
                android:id="@+id/rb_xx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiaoxin" />

            <RadioButton
                android:id="@+id/rb_nn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nanan" />

        </RadioGroup>
    </LinearLayout>

    <Button
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/exit"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_shape_login"/>
</RelativeLayout>